# upskillmee

./: AGENTS.md  AUTH_FIX_SUMMARY.md  CHAT_ENHANCEMENTS_SUMMARY.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CRITICAL_STARTUP_FIX_SUMMARY.md  LICENSE  PRODUCTION_READINESS_SUMMARY.md  README.md  TEST_FIXES_SUMMARY.md  monitoring_verification_results.json  package.json  run_tests.py  security_performance_audit_results.json  test_websocket_integration.py
backend/: .dockerignore  .gitignore  AI_INTEGRATION_ENHANCEMENTS.md  DATABASE_OPTIMIZATION_SUMMARY.md  Dockerfile  MONITORING_SYSTEM_DOCUMENTATION.md  README.md  SECURITY_HARDENING_IMPLEMENTATION.md  VECTOR_DATABASE_INTEGRATION_FIXES.md  ai_enhancement_test_results.json  alembic.ini  conftest.py  debug_learning.py  fix_user_profile_schema.py  health_check.py  main.py  pyproject.toml  pytest.ini  recreate_user_profiles.py  requirements.txt  test_ai_enhancements_simple.py  test_ai_integration_enhancements.py  test_analytics_simple.py  test_auth_api.py  test_enhanced_monitoring.py  test_fixes_simple.py  test_monitoring_simple.py  test_production_monitoring.py  test_production_monitoring_simple.py  test_query_optimization.py  test_security_config.py  test_security_hardening.py  test_security_implementation.py  test_vector_database_integration.py  test_vector_fixes_verification.py  test_vector_integration_simple.py
backend/alembic/: env.py
backend/app/: check_linter_errors.py  dependencies.py  main.py
backend/app/agents/: __init__.py  agent_manager.py  (+4 more)
backend/load_testing/: locustfile.py
backend/migrations/: env.py
backend/reports/: gdpr_compliance_1753272262.json  load_test_results_1753271093.json  performance_analysis_1753270865.json  security_audit_1753272110.json  websocket_load_test_1753270960.json
backend/scripts/: README.md  apply_database_indexes.py  check_db_health.py  comprehensive_security_performance_audit.py  gdpr_compliance_check.py  memory_monitor.py  performance_optimization.py  security_audit.py  simple_load_test.py  test_migrations.py  test_qdrant_integration.py  verify_monitoring_setup.py  websocket_load_test.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_memory.py  test_memory_router.py
backend/testscript/: chat_messages.py  test_chat_memory.py
backend/uploads/: 3882c697-c511-4a48-9b33-1895df40436a_interactive_storybook (1).html  4829e3a2-3469-47ee-8280-1cc6c5d98691_Weather_Storyteller_Task2.py  523ed37e-b6d8-4904-8326-7901fea993bd_ai_story_weaver_cli.py  8af03ab7-a72f-4af9-aad5-e7a3b860da44_ai_story_weaver.py  9dd5b698-7fb7-49c1-b4ba-7b1b65c66f78_interactive_storybook.html  9dd5b698-7fb7-49c1-b4ba-7b1b65c66f78_interactive_storybook_task_1.html  (+1 more)
(+497 files in other folders)
